Fix SRT(LA) cinematic video audio desync (offset).

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -55928,6 +55928,9 @@
         }
       }
     },
+    "Keep timestamps" : {
+
+    },
     "Key frame interval" : {
       "localizations" : {
         "de" : {
