Go live and record buttons in assistant.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -72524,6 +72524,7 @@
       }
     },
     "No settings received yet." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
