Record as fragmented MP4 instead of MP4 for better robustness.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -82629,7 +82629,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Inspelningen avbröts"
+            "value" : "Inspelningen stoppad"
           }
         },
         "tr" : {
