Start new recording on error.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -72523,137 +72523,6 @@
         }
       }
     },
-    "No settings received yet." : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Noch keine Einstellungen erhalten."
-          }
-        },
-        "el" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Δεν έχουν ληφθεί ακόμη ρυθμίσεις."
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Aún no se han recibido ajustes."
-          }
-        },
-        "fi" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Asetuksia ei ole vielä vastaanotettu."
-          }
-        },
-        "fr" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Aucun paramètre reçu pour l'instant."
-          }
-        },
-        "hi" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "अभी तक कोई सेटिंग प्राप्त नहीं हुई."
-          }
-        },
-        "id" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Belum ada pengaturan yang diterima."
-          }
-        },
-        "it" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Nessuna impostazione ancora ricevuta."
-          }
-        },
-        "ja" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "まだ設定を受信して​​いません。"
-          }
-        },
-        "ko" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "아직 설정이 수신되지 않았습니다."
-          }
-        },
-        "nl" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Nog geen instellingen ontvangen."
-          }
-        },
-        "pl" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Nie otrzymano jeszcze żadnych ustawień."
-          }
-        },
-        "pt-BR" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Nenhuma configuração recebida ainda."
-          }
-        },
-        "pt-PT" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Nenhuma configuração recebida ainda."
-          }
-        },
-        "ru" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Настройки ещё не получены."
-          }
-        },
-        "sv" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Inga inställningar har tagits emot ännu."
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Henüz herhangi bir ayar alınmadı."
-          }
-        },
-        "uk" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Налаштувань ще не отримано."
-          }
-        },
-        "vi" : {
-          "stringUnit" : {
-            "state" : "needs_review",
-            "value" : "Chưa nhận được cài đặt nào."
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "尚未收到任何设置。"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "尚未接收任何設定。"
-          }
-        }
-      }
-    },
     "No snapshot received yet." : {
       "localizations" : {
         "de" : {
@@ -82403,6 +82272,9 @@
           }
         }
       }
+    },
+    "Recording error." : {
+
     },
     "Recording started" : {
       "localizations" : {
@@ -98009,6 +97881,9 @@
           }
         }
       }
+    },
+    "Starting a new recording." : {
+
     },
     "Starting stream" : {
       "localizations" : {
