Start new recording on error.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -82273,7 +82273,7 @@
         }
       }
     },
-    "Recording error." : {
+    "Recording error" : {
 
     },
     "Recording started" : {
@@ -97882,7 +97882,7 @@
         }
       }
     },
-    "Starting a new recording." : {
+    "Starting a new recording" : {
 
     },
     "Starting stream" : {
