Keep speaker alive.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -58492,6 +58492,9 @@
         }
       }
     },
+    "Keep speaker alive" : {
+
+    },
     "Key frame interval" : {
       "localizations" : {
         "de" : {
