Remove low adaptive resolution toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -61096,6 +61096,7 @@
       }
     },
     "Low adaptive encoder resolution" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
