Always use audio for MPEG-TS clock.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -115449,6 +115449,7 @@
       }
     },
     "Use video for timestamps" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
